Add Android NDK for Mac/Linux Download Link To Site

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Fndk<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -1314,134 +1314,88 @@
                 <a name="ndk" class="anchor" href="#ndk">
                     <span class="octicon octicon-link"></span>
                 </a>NDK</h4>
-
-            <table>
-                <thead>
-                    <tr>
-                        <th align="left">Platform(32-bit target)</th>
-                        <th align="left">Package</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td align="left">Windows 32-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1bnB1o1T">android-ndk32-r10-windows-x86.zip</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Windows 64-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1gdmW6cj">android-ndk32-r10-windows-x86_64.zip</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Mac OS X 32-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1jGtBYyq">android-ndk32-r10-darwin-x86.tar.bz2</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Mac OS X 64-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1gdADfaF">android-ndk32-r10-darwin-x86_64.tar.bz2</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Linux 32-bit (x86)</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1V2Tg">android-ndk32-r10-linux-x86.tar.bz2</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Linux 64-bit (x86)</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1pJJQokV">android-ndk32-r10-linux-x86_64.tar.bz2</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <table>
-                <thead>
-                    <tr>
-                        <th align="left">Platform(64-bit target)</th>
-                        <th align="left">Package</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td align="left">Windows 32-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1qW0RtzI">android-ndk64-r10-windows-x86.zip</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Windows 64-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1ntypDpf">android-ndk64-r10-windows-x86_64.zip</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Mac OS X 32-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1o6G44Eu">android-ndk64-r10-darwin-x86.tar.bz2</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Mac OS X 64-bit</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1gd7pvJ9">android-ndk64-r10-darwin-x86_64.tar.bz2</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Linux 32-bit (x86)</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1hql8AIo">android-ndk64-r10-linux-x86.tar.bz2</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">Linux 64-bit (x86)</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1dDreuPz">android-ndk64-r10-linux-x86_64.tar.bz2</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <table>
-                <thead>
-                    <tr>
-                        <th align="center">版本号</th>
-                        <th align="center">Windows</th>
-                        <th align="center">Mac OSX</th>
-                        <th align="center">Linux</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td align="center">ndk-r9d</td>
-                        <td align="center">
-                            <a href="http://pan.baidu.com/s/1dDxjl8t">32位</a>  <a href="http://pan.baidu.com/s/1jGgecXw">64位</a>
-                        </td>
-                        <td align="center">
-                            <a href="http://pan.baidu.com/s/1eQnDNEE">32位</a>  <a href="http://pan.baidu.com/s/1i3l5L8T">64位</a>
-                        </td>
-                        <td align="center">
-                            <a href="http://pan.baidu.com/s/1jGr9w4A">32位</a>  <a href="http://pan.baidu.com/s/1sjAXS41">64位</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <table>
-                <thead>
-                    <tr>
-                        <th align="left">Additional Download (32-, 64-bit)</th>
-                        <th align="left">Package</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td align="left">r10 STL debug info</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1xWgUE">android-ndk-r10-cxx-stl-libs-with-debug-info.zip</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="left">r9 STL debug info</td>
-                        <td align="left"><a href="http://pan.baidu.com/s/1c0EMn8O">android-ndk-r9-cxx-stl-libs-with-debug-info.zip</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+			<p>C/C++开发Android应用工具包</p>
+            
+			<table>
+			    <thead>
+			        <tr>
+			            <th align="left">版本号</th>
+			            <th align="center">Windows</th>
+			            <th align="center">Mac OSX</th>
+			            <th align="center">Linux</th>
+			        </tr>
+			    </thead>
+			    <tbody>
+			        <tr>
+			            <td align="left">ndk-r10c</td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1bnGnKkB">32位</a> <a href="http://pan.baidu.com/s/1ntmhjUL">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1i37Ud8L">32位</a> <a href="http://pan.baidu.com/s/1eQ08GOa">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1c0o11wk">32位</a> <a href="http://pan.baidu.com/s/1c0tljk0">64位</a>
+			            </td>
+			        </tr>
+			        <tr>
+			            <td align="left">ndk64-r10</td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1qW0RtzI">32位</a> <a href="http://pan.baidu.com/s/1ntypDpf">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1o6G44Eu">32位</a> <a href="http://pan.baidu.com/s/1gd7pvJ9">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1hql8AIo">32位</a> <a href="http://pan.baidu.com/s/1dDreuPz">64位</a>
+			            </td>
+			        </tr>
+			        <tr>
+			            <td align="left">ndk32-r10</td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1bnB1o1T">32位</a> <a href="http://pan.baidu.com/s/1gdmW6cj">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1jGtBYyq">32位</a> <a href="http://pan.baidu.com/s/1gdADfaF">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1V2Tg">32位</a> <a href="http://pan.baidu.com/s/1pJJQokV">64位</a>
+			            </td>
+			        </tr>
+			        <tr>
+			            <td align="left">ndk-r9d</td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1dDxjl8t">32位</a> <a href="http://pan.baidu.com/s/1jGgecXw">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1eQnDNEE">32位</a> <a href="http://pan.baidu.com/s/1i3l5L8T">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1jGr9w4A">32位</a> <a href="http://pan.baidu.com/s/1sjAXS41">64位</a>
+			            </td>
+			        </tr>
+			    </tbody>
+			</table>
+			<table>
+			    <thead>
+			        <tr>
+			            <th align="left">Additional Download (32-, 64-bit)</th>
+			            <th align="left">Package</th>
+			        </tr>
+			    </thead>
+			    <tbody>
+			        <tr>
+			            <td align="left">r10 STL debug info</td>
+			            <td align="left"><a href="http://pan.baidu.com/s/1xWgUE">android-ndk-r10-cxx-stl-libs-with-debug-info.zip</a>
+			            </td>
+			        </tr>
+			        <tr>
+			            <td align="left">r9 STL debug info</td>
+			            <td align="left"><a href="http://pan.baidu.com/s/1c0EMn8O">android-ndk-r9-cxx-stl-libs-with-debug-info.zip</a>
+			            </td>
+			        </tr>
+			    </tbody>
+			</table>
 
             <h4 id="android-l-preview-system-image">
                 <a name="android-l-preview-system-image" class="anchor" href="#android-l-preview-system-image">
