--- a/index.html
+++ b/index.html
@@ -226,6 +226,15 @@
                     </tr>
                 </thead>
                 <tbody>
+                	<tr>
+                        <td align="center">1.0 RC4</td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1pJkbwin">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1hq1QBVQ">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1eQBygj4">下载</a>
+                        </td>
+                   </tr>
                    <tr>
                         <td align="center">1.0 RC2</td>
                         <td align="center"><a href="http://pan.baidu.com/s/1sjx4rNJ">下载</a>
