Add Android Studio 1.0正式版和SDK Tools Download Link to Site

--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
                 </thead>
                 <tbody>
                 	<tr>
+                        <td align="center">1.0正式版</td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1eQzmQDO">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1dDitUFJ">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1kTn7wLx">下载</a>
+                        </td>
+                   </tr>
+                	<tr>
                         <td align="center">1.0 RC4</td>
                         <td align="center"><a href="http://pan.baidu.com/s/1pJkbwin">下载</a>
                         </td>
@@ -523,6 +532,19 @@
                     </tr>
                 </thead>
                 <tbody>
+                	<tr>
+                        <td align="center">sdk-tools-r24</td>
+                        <td align="center">
+                            <a href="http://pan.baidu.com/s/1jG5ks7c">installer_r23.0.2-windows.exe</a>  
+                            <a href="http://pan.baidu.com/s/1pJ4uk4r">android-sdk_r23.0.2-windows.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1pJ8xUgN">android-sdk_r23.0.2-macosx.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1pJ4uk47">android-sdk_r23.0.2-linux.tgz</a>
+                        </td>
+                    </tr>
                     <tr>
                         <td align="center">sdk-tools-r23.0.5</td>
                         <td align="center">
@@ -536,7 +558,8 @@
                     <tr>
                         <td align="center">sdk-tools-r23.0.2</td>
                         <td align="center">
-                            <a href="http://pan.baidu.com/s/1jGj2xIA">installer_r23.0.2-windows.exe</a>  <a href="http://pan.baidu.com/s/1CiWSu">android-sdk_r23.0.2-windows.zip</a>
+                            <a href="http://pan.baidu.com/s/1jGj2xIA">installer_r23.0.2-windows.exe</a>  
+                            <a href="http://pan.baidu.com/s/1CiWSu">android-sdk_r23.0.2-windows.zip</a>
                         </td>
                         <td align="center"><a href="http://pan.baidu.com/s/1bny9Mk3">android-sdk_r23.0.2-macosx.zip</a>
                         </td>
