Add Android Studio 1.0.1、SDK Tools r24.0.1、Extras 21.0.3、Support Library 21.0.3 And NDK r10c Installation method Link

--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+						<td align="center">1.0.1</td>
+						<td align="center"><a href="http://pan.baidu.com/s/1cu76m">下载</a></td>
+						<td align="center"><a href="http://pan.baidu.com/s/1hqoZCDe">下载</a></td>
+						<td align="center"><a href="http://pan.baidu.com/s/1c0nLN6g">下载</a></td>
+					</tr>
+                	<tr>
                         <td align="center">1.0正式版</td>
                         <td align="center"><a href="http://pan.baidu.com/s/1eQzmQDO">下载</a>
                         </td>
@@ -533,16 +539,29 @@
                 </thead>
                 <tbody>
                 	<tr>
+                        <td align="center">sdk-tools-r24.0.1</td>
+                        <td align="center">
+                            <a href="http://pan.baidu.com/s/1gdgojhp">installer_r24.0.1-windows.exe</a>  
+                            <a href="http://pan.baidu.com/s/1gdEKclP">android-sdk_r24.0.1-windows.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1i3467DN">android-sdk_r24.0.1-macosx.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1gdvNj83">android-sdk_r24.0.1-linux.tgz</a>
+                        </td>
+                    </tr>
+                	<tr>
                         <td align="center">sdk-tools-r24</td>
                         <td align="center">
-                            <a href="http://pan.baidu.com/s/1jG5ks7c">installer_r23.0.2-windows.exe</a>  
-                            <a href="http://pan.baidu.com/s/1pJ4uk4r">android-sdk_r23.0.2-windows.zip</a>
+                            <a href="http://pan.baidu.com/s/1jG5ks7c">installer_r24-windows.exe</a>  
+                            <a href="http://pan.baidu.com/s/1pJ4uk4r">android-sdk_r24-windows.zip</a>
                         </td>
                         <td align="center">
-                        	<a href="http://pan.baidu.com/s/1pJ8xUgN">android-sdk_r23.0.2-macosx.zip</a>
+                        	<a href="http://pan.baidu.com/s/1pJ8xUgN">android-sdk_r24-macosx.zip</a>
                         </td>
                         <td align="center">
-                        	<a href="http://pan.baidu.com/s/1pJ4uk47">android-sdk_r23.0.2-linux.tgz</a>
+                        	<a href="http://pan.baidu.com/s/1pJ4uk47">android-sdk_r24-linux.tgz</a>
                         </td>
                     </tr>
                     <tr>
@@ -1220,6 +1239,10 @@
                 </thead>
                 <tbody>
                 	<tr>
+                        <td align="center"><a href="http://pan.baidu.com/s/1kTmlB9d">21.0.3</a>
+                        </td>
+                    </tr>
+                	<tr>
                         <td align="center"><a href="http://pan.baidu.com/s/1mgso8Y0">21.0.2</a>
                         </td>
                     </tr>
@@ -1252,6 +1275,10 @@
                     </tr>
                 </thead>
                 <tbody>
+                	<tr>
+                        <td align="center"><a href="http://pan.baidu.com/s/1jG5k2Lg">21.0.3</a>
+                        </td>
+                    </tr>
                 	<tr>
                         <td align="center"><a href="http://pan.baidu.com/s/1kTzIkYV">21.0.2</a>
                         </td>
@@ -1346,7 +1373,7 @@
                 <a name="ndk" class="anchor" href="#ndk">
                     <span class="octicon octicon-link"></span>
                 </a>NDK</h4>
-			<p>C/C++开发Android应用工具包</p>
+			<p>C/C++开发Android应用工具包,<code>Linux/Mac OS X 下NDK r10c</code>的安装方法请戳[这里](<a href="https://github.com/inferjay/AndroidDevTools/wiki/Installing-the-NDK-On-Linux-and-Mac-OS-X-(Darwin)">https://github.com/inferjay/AndroidDevTools/wiki/Installing-the-NDK-On-Linux-and-Mac-OS-X-(Darwin)</a></p>
             
 			<table>
 			    <thead>
