Add Anroid Studio 1.0.2 and SDK Tools 24.0.2 Link to site

--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+						<td align="center">1.0.2</td>
+						<td align="center"><a href="http://pan.baidu.com/s/1pJA0b0n">下载</a></td>
+						<td align="center"><a href="http://pan.baidu.com/s/1jGuvmuU">下载</a></td>
+						<td align="center"><a href="http://pan.baidu.com/s/1qWCzSjM">下载</a></td>
+					</tr>
+                	<tr>
 						<td align="center">1.0.1</td>
 						<td align="center"><a href="http://pan.baidu.com/s/1cu76m">下载</a></td>
 						<td align="center"><a href="http://pan.baidu.com/s/1hqoZCDe">下载</a></td>
@@ -538,6 +544,19 @@
                     </tr>
                 </thead>
                 <tbody>
+                	<tr>
+                        <td align="center">sdk-tools-r24.0.2</td>
+                        <td align="center">
+                            <a href="http://pan.baidu.com/s/1eQH3ZOI">installer_r24.0.2-windows.exe</a>  
+                            <a href="http://pan.baidu.com/s/1c0vnzMC">android-sdk_r24.0.2-windows.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1mgDnXMw">android-sdk_r24.0.2-macosx.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1eQEglTS">android-sdk_r24.0.2-linux.tgz</a>
+                        </td>
+                    </tr>
                 	<tr>
                         <td align="center">sdk-tools-r24.0.1</td>
                         <td align="center">
