--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+						<td align="center">1.1 Preview 1</td>
+						<td align="center"><a href="http://pan.baidu.com/s/1kTFsJ9H">下载</a></td>
+						<td align="center"><a href="http://pan.baidu.com/s/1o6p4j8I">下载</a></td>
+						<td align="center"><a href="http://pan.baidu.com/s/1pJJouDl">下载</a></td>
+					</tr>
+                	<tr>
 						<td align="center">1.0.2</td>
 						<td align="center"><a href="http://pan.baidu.com/s/1pJA0b0n">下载</a></td>
 						<td align="center"><a href="http://pan.baidu.com/s/1jGuvmuU">下载</a></td>
