Add gradle 2.2 and 2.2.1 link

--- a/index.html
+++ b/index.html
@@ -1572,6 +1572,14 @@
                     </tr>
                 </thead>
                 <tbody>
+                	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1nt9jd25">gradle-2.2.1-all.zip</a>
+                        </td>
+                    </tr>
+                	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1CTrBK">gradle-2.2-all.zip</a>
+                        </td>
+                    </tr>
                     <tr>
                         <td align="left"><a href="http://pan.baidu.com/s/1bnF6jV5">gradle-2.1-all.zip</a>
                         </td>
