Add Platform-Tools link

--- a/index.html
+++ b/index.html
@@ -629,6 +629,33 @@
 		  </p>
 	    </blockquote>
 	    
+	    <h4><a id="sdk-platform-tools" class="anchor" href="#sdk-platform-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>SDK Platform-Tools</h4>
+			<p>这是 adb, fastboot 等工具包。把解压出来的 <code>platform-tools</code> 文件夹放在 android sdk 根目录下，并把 <code>adb</code>所在的目录添加到系统 <code>PATH</code> 路径里，即可在命令行里直接访问了 adb, fastboot 等工具。</p>
+	    <table>
+				<thead>
+					<tr>
+					<th align="left">版本号</th>
+					<th align="center">Windows</th>
+					<th align="left">Mac OSX</th>
+					<th align="center">Linux</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+					<td align="left">platform-tools-r21</td>
+					<td align="center"><a href="http://pan.baidu.com/s/1gdF1fkZ">platform-tools_r21-windows.zip</a></td>
+					<td align="left"><a href="http://pan.baidu.com/s/1dDu6xC9">platform-tools_r21-mac.zip</a></td>
+					<td align="center"><a href="http://pan.baidu.com/s/1dDAL25j">platform-tools_r21-linux.zip</a></td>
+					</tr>
+					<tr>
+					<td align="left">platform-tools-r20</td>
+					<td align="center"><a href="http://pan.baidu.com/s/1ntHqLZj">platform-tools_r20-windows.zip</a></td>
+					<td align="left"><a href="http://pan.baidu.com/s/1gdy6fzP">platform-tools_r20-mac.zip</a></td>
+					<td align="center"><a href="http://pan.baidu.com/s/173KQi">platform-tools_r20-linux.zip</a></td>
+					</tr>
+				</tbody>
+			</table>
+	    
 	    <h4>
 		<a id="build-tools" class="anchor" href="#build-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build-Tools</h4>
 		<p>这是Android开发所需的Build-Tools，下载并解压后，将解压出的整个文件夹复制或者移动到 <code>your sdk 路径/build-tools</code> 文件夹即可。</p>
