Add Platform-tools Link to Nav

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							          <li role="presentation"><a role="menuitem" tabindex="0" href="#android-studio">Android Studio</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="1" href="#adt-plugin">ADT Plugin</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="2" href="#sdk-tools">SDK Tools</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="2" href="#sdk-platform-tools">Platform-tools</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="2" href="#build-tools">Build Tools</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="3" href="#sdk-list">SDK</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#ndk">NDK</a></li>
