Add Android Studio 1.1 Beta And Beta2 Link

--- a/index.html
+++ b/index.html
@@ -257,6 +257,18 @@
                     </tr>
                 </thead>
                 <tbody>
+                	<tr>
+										<td align="center">1.1 Beta2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1gdCJ4H1">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hqpaWa4">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3w0vT7">下载</a></td>
+									</tr>
+                  <tr>
+										<td align="center">1.1 Beta</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDo1b9Z">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1kT21VQv">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1gdrKGsb">下载</a></td>
+									</tr>
                   <tr>
 										<td align="center">1.1 Preview 2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1pJMCx79">下载</a></td>
