--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+                    <td align="center">1.1 RC1</td>
+                    <td align="center"><a href="http://pan.baidu.com/s/1jG3QuV0">下载</a></td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1eQhDPPw">下载</a></td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1o6smUng">下载</a></td>
+                  </tr>
+                	<tr>
 										<td align="center">1.1 Beta4</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1ntMaSA1">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1bn2IyMN">下载</a></td>
