Add Android Studio 1.1 And Android Drawable Importer Link

--- a/index.html
+++ b/index.html
@@ -258,10 +258,16 @@
                 </thead>
                 <tbody>
                 	<tr>
+                    <td align="center">1.1 正式版</td>
+                    <td align="center"><a href="http://pan.baidu.com/s/1sjr1dpj">下载</a></td>
+                    <td align="center"><a href="http://pan.baidu.com/s/1mg0yHi4">下载</a></td>
+                    <td align="center"><a href="http://pan.baidu.com/s/1jGDubg6">下载</a></td>
+                  </tr>
+                	<tr>
                     <td align="center">1.1 RC1</td>
                     <td align="center"><a href="http://pan.baidu.com/s/1jG3QuV0">下载</a></td>
-                        <td align="center"><a href="http://pan.baidu.com/s/1eQhDPPw">下载</a></td>
-                        <td align="center"><a href="http://pan.baidu.com/s/1o6smUng">下载</a></td>
+                    <td align="center"><a href="http://pan.baidu.com/s/1eQhDPPw">下载</a></td>
+                    <td align="center"><a href="http://pan.baidu.com/s/1o6smUng">下载</a></td>
                   </tr>
                 	<tr>
 										<td align="center">1.1 Beta4</td>
@@ -2216,6 +2222,12 @@
                     <tr>
                         <td align="left">Drawable Selectors Generates Plugin</td>
                         <td align="center"><a href="https://github.com/inmite/android-selector-chapek">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
+                    <tr>
+                        <td align="left">Android Drawable Importer</td>
+                        <td align="center"><a href="https://github.com/winterDroid/android-drawable-importer-intellij-plugin">下载</a>
                         </td>
                         <td align="center"></td>
                     </tr>
