Add Android Studio 1.2 Preview 1 And Android APK Decompiler Link

--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 Preview 1</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1sj6uAfz">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mgIGdio">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mgsrAXU">下载</a></td>
+									</tr>
+                	<tr>
                     <td align="center">1.1 正式版</td>
                     <td align="center"><a href="http://pan.baidu.com/s/1sjr1dpj">下载</a></td>
                     <td align="center"><a href="http://pan.baidu.com/s/1mg0yHi4">下载</a></td>
@@ -1892,6 +1898,12 @@
                         <td align="center"><a href="http://files.cnblogs.com/arix04/XJad_V2.2.rar">下载</a>
                         </td>
                         <td align="center"></td>
+                    </tr>
+                    <tr>
+                        <td align="left">Android APK Decompiler</td>
+                        <td align="center"><a href="http://www.decompileandroid.com/">下载</a>
+                        </td>
+                        <td align="center">在线反编译工具</td>
                     </tr>
                 </tbody>
             </table>
