Add Android Studio 1.2 Preview 2

--- a/index.html
+++ b/index.html
@@ -266,6 +266,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 Preview 2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1qWn0bqk">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1jGEaFII">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1o6Fo0iu">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.2 Preview 1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1sj6uAfz">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1mgIGdio">下载</a></td>
