Fix BBQScreen Link Error

--- a/index.html
+++ b/index.html
@@ -4107,7 +4107,7 @@
                     <tr>
                         <td align="left">BBQScreen</td>
                         <td></td>
-                        <td align="center"><a href="http://www.airserver.com">下载</a>
+                        <td align="center"><a href="http://screen.bbqdroid.org">下载</a>
                         </td>
                         <td align="center"></td>
                     </tr>
