Add Android Studio 1.2 Preview 4

--- a/index.html
+++ b/index.html
@@ -222,6 +222,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 Preview 4</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1pJ0ZHij">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3kqZ9j">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3w2nNv">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.2 Preview 3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1qWx97pa">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3BuYFz">下载</a></td>
