Add Structural Java Exception Search、Augmented Traffic Control and Android SVG to VectorDrawable

--- a/index.html
+++ b/index.html
@@ -2072,7 +2072,57 @@
                     </tr>
                 </tbody>
             </table>
-
+						<h4>
+								<a id="搜索工具" class="anchor" href="#%E6%90%9C%E7%B4%A2%E5%B7%A5%E5%85%B7" aria-hidden="true">
+									<span class="octicon octicon-link"></span></a>搜索工具
+						</h4>
+						<table>
+							<thead>
+								<tr>
+								<th align="left">名称</th>
+								<th align="left">简介</th>
+								<th align="center">下载地址</th>
+								<th align="center">使用教程</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+								<td align="left">Structural Java Exception Search</td>
+								<td align="left">Java异常搜索工具</td>
+								<td align="center"><a href="http://www.brainleg.com/search">下载</a></td>
+								<td align="center"></td>
+								</tr>
+							</tbody>
+						</table>
+						<h4>
+							<a id="debug调试工具" class="anchor" href="#debug%E8%B0%83%E8%AF%95%E5%B7%A5%E5%85%B7" aria-hidden="true">
+								<span class="octicon octicon-link"></span>
+							</a>Debug调试工具
+						</h4>
+						<table>
+								<thead>
+									<tr>
+									<th align="left">名称</th>
+									<th align="left">简介</th>
+									<th align="center">下载地址</th>
+									<th align="center">使用教程</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+									<td align="left">Stetho</td>
+									<td align="left">Stetho 是Facebook推出的Android 调试平台，基于 </br>Chrome Developer Tools ，调试网络请求方面特别方便。</td>
+									<td align="center"><a href="https://github.com/facebook/stetho">下载</a></td>
+									<td align="center"><a href="http://facebook.github.io/stetho/">教程</a></td>
+									</tr>
+									<tr>
+									<td align="left">Augmented Traffic Control</td>
+									<td align="left">Facebook宣布开源移动网络测试工具ATC，该工具支持利用</br>Wi-Fi网络模拟2G、2.5G、3G以及LTE 4G移动网络</br>环境，让测试工程师们能够快速对智能手机和App在</br>不同国家地区和应用环境下的性能表现进行测试。</td>
+									<td align="center"><a href="https://github.com/facebook/augmented-traffic-control">下载</a></td>
+									<td align="center"></td>
+									</tr>
+								</tbody>
+						</table>
             <h4 id="eclipse-android-studio-idea-plugin">
                 <a name="eclipseandroid-studioidea%E6%8F%92%E4%BB%B6" class="anchor" href="#eclipse-android-studio-idea-plugin">
                     <span class="octicon octicon-link"></span>
@@ -2517,6 +2567,12 @@
                         </td>
                         <td align="center"></td>
                     </tr>
+                    <tr>
+												<td align="left">Android SVG to VectorDrawable</td>
+												<td align="left">一个可以将SVG图片转换为Vector Drawable xml文件的在线工具。</td>
+												<td align="center"><a href="http://inloop.github.io/svg2android/">下载</a></td>
+												<td align="center"></td>
+										</tr>
                 </tbody>
             </table>
 
