--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#version-control-tools">版本控制工具</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#apk-decompile-tools">Apk反编译工具</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#security-tools">安全工具</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#search-tools">搜索工具</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#debug-tools">Debug调试工具</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#eclipse-android-studio-idea-plugin">IDE插件</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#android-res-themes-style-generator-tools">Themes/Style生成工具</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#android-res-analysis-tools">资源分析工具</a></li>
@@ -2073,7 +2075,7 @@
                 </tbody>
             </table>
 						<h4>
-								<a id="搜索工具" class="anchor" href="#%E6%90%9C%E7%B4%A2%E5%B7%A5%E5%85%B7" aria-hidden="true">
+								<a id="search-tools" class="anchor" href="#%E6%90%9C%E7%B4%A2%E5%B7%A5%E5%85%B7" aria-hidden="true">
 									<span class="octicon octicon-link"></span></a>搜索工具
 						</h4>
 						<table>
@@ -2095,7 +2097,7 @@
 							</tbody>
 						</table>
 						<h4>
-							<a id="debug调试工具" class="anchor" href="#debug%E8%B0%83%E8%AF%95%E5%B7%A5%E5%85%B7" aria-hidden="true">
+							<a id="debug-tools" class="anchor" href="#debug%E8%B0%83%E8%AF%95%E5%B7%A5%E5%85%B7" aria-hidden="true">
 								<span class="octicon octicon-link"></span>
 							</a>Debug调试工具
 						</h4>
