--- a/index.html
+++ b/index.html
@@ -1977,6 +1977,13 @@
                         </td>
                         <td align="center"><a href="http://blog.avlyun.com/show/《sv用户指南》/">使用指南</a></td>
                     </tr>
+                    <tr>
+                        <td align="left">Android逆向助手</td>
+                        <td align="center"><p>Android逆向助手是一功能强大的逆向辅助软件。</p><p>该软件可以帮助用户来进行apk反编译打包签名；</p><p>dex/jar互转替换提取修复；so反编译；</p><p>xml、txt加密；字符串编码等等，操作简单，</p><p>只需要直接将文件拖放到源和目标文件。</p></td>
+                        <td align="center"><a href="http://enjoycode.info/uploads/Androidnxzs.zip">下载</a>
+                        </td>
+                        <td align="center"><a href="http://www.sanwho.com/620.html">使用指南</a></td>
+                    </tr>
                 </tbody>
             </table>
 
