Add NDK R10d And Android Studio 1.2 beta

--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 Beta</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1c0cZHXu">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1bnrUSBd">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1kTpCFTt">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.2 Preview 4</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1pJ0ZHij">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3kqZ9j">下载</a></td>
@@ -1481,6 +1487,18 @@
 			        </tr>
 			    </thead>
 			    <tbody>
+			    		<tr>
+			            <td align="left">ndk-r10d</td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1yc9BK">32位</a> <a href="http://pan.baidu.com/s/1dDGTrk1">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1hqtg8Qg">32位</a> <a href="http://pan.baidu.com/s/1c0En1Uo">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1ntkOWEP">32位</a> <a href="http://pan.baidu.com/s/1cxPFK">64位</a>
+			            </td>
+			        </tr>
 			        <tr>
 			            <td align="left">ndk-r10c</td>
 			            <td align="center">
