--- a/index.html
+++ b/index.html
@@ -1708,6 +1708,10 @@
                     </tr>
                 </thead>
                 <tbody>
+                		<tr>
+                        <td align="center"><a href="http://pan.baidu.com/s/1jGraNEQ">ADT-23.0.6</a>
+                        </td>
+                    </tr>
                     <tr>
                         <td align="center"><a href="http://pan.baidu.com/s/1i39UM7j">ADT-23.0.4</a>
                         </td>
