Add Android Killer

--- a/index.html
+++ b/index.html
@@ -2006,6 +2006,13 @@
                         </td>
                         <td align="center"><a href="http://www.sanwho.com/620.html">使用指南</a></td>
                     </tr>
+                    <tr>
+                        <td align="left">Android Killer</td>
+                        <td align="center"><Android Killer 是一款可视化的安卓应用逆向工具，<br/>集Apk反编译、Apk打包、Apk签名，编码互转，<br/>ADB通信（应用安装-卸载-运行-设备文件管理）等特色<br/>功能于一 身，支持logcat日志输出，语法高亮，<br/>基于关键字（支持单行代码或多行代码段）项目内搜索，<br/>可自定义外部工具；吸收融汇多种工具功能与特点，<br/>打造一站 式逆向工具操作体验，大大简化了用户在<br/>安卓应用/游戏修改过程中的各类繁琐工作。</td>
+                        <td align="center"><a href="http://www.pd521.com/thread-136-1-1.html">下载1</a><br/><a href="http://pan.baidu.com/share/home?uk=4099707276#category/type=6">下载2</a>
+                        </td>
+                        <td align="center"><a href="http://www.pd521.com/thread-509-1-1.html">使用指南</a></td>
+                    </tr>
                 </tbody>
             </table>
 
